force-app/main/default/objects/Invite_Request__c/Invite_Request__c.object-meta.xml
<CustomObject>
    <label>Invite Request</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invite Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invite Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>