force-app/main/default/objects/Invite_Request__c/fields/Annual_Revenue_Band__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Band__c</fullName>
    <label>Annual Revenue Band</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>0-10L INR</fullName>
        </value>
        <value>
            <fullName>10L-50L INR</fullName>
        </value>
        <value>
            <fullName>50L-1Cr INR</fullName>
        </value>
        <value>
            <fullName>1Cr-5Cr INR</fullName>
        </value>
        <value>
            <fullName>5Cr-25Cr INR</fullName>
        </value>
        <value>
            <fullName>25Cr and above INR</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>