force-app/main/default/objects/Invite_Request__c/fields/Blog_Count__c.field-meta.xml
<CustomField>
    <fullName>Blog_Count__c</fullName>
    <label>Blog Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>