force-app/main/default/objects/Invite_Request__c/fields/Company_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Registration_Number__c</fullName>
    <inlineHelpText>Self-reported CIN at signup (Company only)</inlineHelpText>
    <label>Company Registration Number</label>
    <length>21</length>
    <type>Text</type>
</CustomField>