force-app/main/default/objects/Invite_Request__c/fields/Content_Depth__c.field-meta.xml
<CustomField>
    <fullName>Content_Depth__c</fullName>
    <label>Content Depth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>