force-app/main/default/objects/Invite_Request__c/fields/Converted_Account__c.field-meta.xml
<CustomField>
    <fullName>Converted_Account__c</fullName>
    <label>Converted Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invite Requests</relationshipLabel>
    <relationshipName>Invite_Requests</relationshipName>
</CustomField>