force-app/main/default/objects/Invite_Request__c/fields/Dossier__c.field-meta.xml
<CustomField>
    <fullName>Dossier__c</fullName>
    <label>Dossier</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>