force-app/main/default/objects/Invite_Request__c/fields/Expansion_Signal__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Signal__c</fullName>
    <label>Expansion Signal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>