force-app/main/default/objects/Invite_Request__c/fields/Expected_Revenue_INR__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_INR__c</fullName>
    <label>Expected Revenue (INR)</label>
    <inlineHelpText>Annual payment volume the applicant expects to process through Stripe</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>