force-app/main/default/objects/Invite_Request__c/fields/Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score__c</fullName>
    <label>Fit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>