force-app/main/default/objects/Invite_Request__c/fields/GST_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Number__c</fullName>
    <inlineHelpText>Optional, if registered for GST</inlineHelpText>
    <label>GST Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>