force-app/main/default/objects/Invite_Request__c/fields/Has_IEC__c.field-meta.xml
<CustomField>
    <fullName>Has_IEC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has IEC</label>
    <type>Checkbox</type>
</CustomField>