force-app/main/default/objects/Invite_Request__c/fields/Has_Overseas_Entity__c.field-meta.xml
<CustomField>
    <fullName>Has_Overseas_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Overseas Entity</label>
    <type>Checkbox</type>
</CustomField>