force-app/main/default/objects/Invite_Request__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Founder/Owner</fullName>
        </value>
        <value>
            <fullName>C-Level</fullName>
        </value>
        <value>
            <fullName>VP/Director</fullName>
        </value>
        <value>
            <fullName>Manager</fullName>
        </value>
        <value>
            <fullName>Individual Contributor</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>