force-app/main/default/objects/Invite_Request__c/fields/Legitimacy_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Legitimacy_Verdict__c</fullName>
    <label>Legitimacy Verdict</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
            <value>
                <fullName>Suspicious</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>