force-app/main/default/objects/Invite_Request__c/fields/Marketing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Consent</label>
    <type>Checkbox</type>
</CustomField>