force-app/main/default/objects/Invite_Request__c/fields/MCA_CIN__c.field-meta.xml
<CustomField>
    <fullName>MCA_CIN__c</fullName>
    <label>MCA CIN</label>
    <length>21</length>
    <type>Text</type>
</CustomField>