force-app/main/default/objects/Invite_Request__c/fields/PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number__c</fullName>
    <inlineHelpText>Individual only</inlineHelpText>
    <label>PAN Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>