force-app/main/default/objects/Invite_Request__c/fields/Registered_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Registered_Entity_Type__c</fullName>
    <label>Registered Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Sole Proprietorship</fullName>
        </value>
        <value>
            <fullName>LLP</fullName>
        </value>
        <value>
            <fullName>Private Limited</fullName>
        </value>
        <value>
            <fullName>None</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>