force-app/main/default/objects/Invite_Request__c/fields/Score_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Score_Rationale__c</fullName>
    <label>Score Rationale</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>