force-app/main/default/objects/Invite_Request__c/fields/Seeking_Overseas_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Seeking_Overseas_Expansion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seeking Overseas Expansion</label>
    <type>Checkbox</type>
</CustomField>