force-app/main/default/objects/Invite_Request__c/fields/Sells__c.field-meta.xml
<CustomField>
    <fullName>Sells__c</fullName>
    <label>Sells</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Services</fullName>
        </value>
        <value>
            <fullName>Goods</fullName>
        </value>
        <value>
            <fullName>Both</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>