force-app/main/default/objects/Invite_Request__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Andhra Pradesh</fullName>
        </value>
        <value>
            <fullName>Arunachal Pradesh</fullName>
        </value>
        <value>
            <fullName>Assam</fullName>
        </value>
        <value>
            <fullName>Bihar</fullName>
        </value>
        <value>
            <fullName>Chhattisgarh</fullName>
        </value>
        <value>
            <fullName>Goa</fullName>
        </value>
        <value>
            <fullName>Gujarat</fullName>
        </value>
        <value>
            <fullName>Haryana</fullName>
        </value>
        <value>
            <fullName>Himachal Pradesh</fullName>
        </value>
        <value>
            <fullName>Jharkhand</fullName>
        </value>
        <value>
            <fullName>Karnataka</fullName>
        </value>
        <value>
            <fullName>Kerala</fullName>
        </value>
        <value>
            <fullName>Madhya Pradesh</fullName>
        </value>
        <value>
            <fullName>Maharashtra</fullName>
        </value>
        <value>
            <fullName>Manipur</fullName>
        </value>
        <value>
            <fullName>Meghalaya</fullName>
        </value>
        <value>
            <fullName>Mizoram</fullName>
        </value>
        <value>
            <fullName>Nagaland</fullName>
        </value>
        <value>
            <fullName>Odisha</fullName>
        </value>
        <value>
            <fullName>Punjab</fullName>
        </value>
        <value>
            <fullName>Rajasthan</fullName>
        </value>
        <value>
            <fullName>Sikkim</fullName>
        </value>
        <value>
            <fullName>Tamil Nadu</fullName>
        </value>
        <value>
            <fullName>Telangana</fullName>
        </value>
        <value>
            <fullName>Tripura</fullName>
        </value>
        <value>
            <fullName>Uttar Pradesh</fullName>
        </value>
        <value>
            <fullName>Uttarakhand</fullName>
        </value>
        <value>
            <fullName>West Bengal</fullName>
        </value>
        <value>
            <fullName>Andaman and Nicobar Islands</fullName>
        </value>
        <value>
            <fullName>Chandigarh</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>