force-app/main/default/objects/Invite_Request__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <valueSetDefinition>
        <value>
            <fullName>New Submission</fullName>
        </value>
        <value>
            <fullName>Duplicate Check Pending</fullName>
        </value>
        <value>
            <fullName>Awaiting Crawl</fullName>
        </value>
        <value>
            <fullName>Crawl In Progress</fullName>
        </value>
        <value>
            <fullName>Awaiting Score</fullName>
        </value>
        <value>
            <fullName>Docs Requested</fullName>
        </value>
        <value>
            <fullName>Fix Requested</fullName>
        </value>
        <value>
            <fullName>Awaiting Applicant Response</fullName>
        </value>
        <value>
            <fullName>Assigned to Reviewer</fullName>
        </value>
        <value>
            <fullName>Escalated to Manager</fullName>
        </value>
        <value>
            <fullName>Pending Final Call</fullName>
        </value>
        <value>
            <fullName>Pending Provisioning</fullName>
        </value>
        <value>
            <fullName>Account Setup</fullName>
        </value>
        <value>
            <fullName>Keys Issued</fullName>
        </value>
        <value>
            <fullName>Awaiting First Transaction</fullName>
        </value>
        <value>
            <fullName>Healthy</fullName>
        </value>
        <value>
            <fullName>Needs Attention</fullName>
        </value>
        <value>
            <fullName>Upsell Ready</fullName>
        </value>
        <value>
            <fullName>Stable</fullName>
        </value>
        <value>
            <fullName>Low Score</fullName>
        </value>
        <value>
            <fullName>Missing Entity Registration</fullName>
        </value>
        <value>
            <fullName>Revisit in 90 Days</fullName>
        </value>
        <value>
            <fullName>Fraud Suspected</fullName>
        </value>
        <value>
            <fullName>Ineligible Country</fullName>
        </value>
        <value>
            <fullName>Duplicate Application</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>