force-app/main/default/objects/Invite_Request__c/fields/Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Work_Email__c</fullName>
    <label>Work Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>