force-app/main/default/objects/Invite_Request__c/recordTypes/Company.recordType-meta.xml
<RecordType>
    <fullName>Company</fullName>
    <label>Company</label>
    <active>true</active>
    <description>Applicant applying as a registered business</description>
</RecordType>