force-app/main/default/objects/Invite_Request__c/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <description>Applicant applying as a person, not yet incorporated</description>
    <label>Individual</label>
</RecordType>