force-app/main/default/objects/Invite_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All Invite Requests</label>
    <columns>NAME</columns>
    <columns>Applicant_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>Fit_Score__c</columns>
    <columns>Decision__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>